# signer-proxy

./: .gitignore  Cargo.toml  README.md  funding.json
src/: app_types.rs  cli.rs  error.rs  jsonrpc.rs  main.rs  shutdown_signal.rs  yubihsm.rs
src/signers/: aws_kms.rs  common.rs  mock.rs  mod.rs  yubihsm.rs
test/: index.js  package.json
