[package]
name = "yubihsm-signer-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yubihsm = { version = "0.42.1", features = ["usb", "secp256k1"] }
reqwest = { version = "0.12.4", features = ["json"] }
structopt = "0.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
alloy = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0", features = [
  "k256",
  "rpc",
  "rlp",
  "rpc-types",
  "rpc-types-eth",
  "consensus",
  "network",
  "providers",
  "signers",
  "signer-wallet",
  "signer-yubihsm",
] }
anyhow = "1.0.86"
tower-http = { version = "0.5.2", features = ["timeout"] }
