[package]
name = "yubihsm-signer-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
alloy = { git = "https://github.com/quertc/alloy", branch = "better-yubi", features = [
  "rlp",
  "rpc-types",
  "network",
  "signer-yubihsm",
] }
anyhow = "1.0.86"
tower-http = { version = "0.5.2", features = ["timeout", "trace"] }
strum = { version = "0.26", features = ["derive"] }
aws-sdk-kms = "1.38.0"
